优化quickvo